infra/k8s/frontend-deployment.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 296062560614.dkr.ecr.us-east-1.amazonaws.com/sketchy-bids-frontend-app:1.1
        ports:
        - containerPort: 80
        image: 296062560614.dkr.ecr.us-east-1.amazonaws.com/sketchy-bids-frontend-app
        ports:
        - containerPort: 80
