infra/k8s/backend-service.yaml
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: sketchybid-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
